[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/testing/test-mech/hud/TorsoReticle.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/hud/NotoSansHUD.tres" type="DynamicFont" id=2]

[node name="TorsoReticle" type="Position2D"]
script = ExtResource( 1 )

[node name="Outlines" type="Position2D" parent="."]
visible = false

[node name="OuterTopRight2" type="Line2D" parent="Outlines"]
visible = false
position = Vector2( 48, -45 )
points = PoolVector2Array( 2, 2, 10, 10, 10, 28 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 346077216
begin_cap_mode = 2
end_cap_mode = 2

[node name="OuterTopRight" type="Line2D" parent="."]
position = Vector2( 50, -45 )
points = PoolVector2Array( 0, 0, 10, 10, 10, 30 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 346077216
begin_cap_mode = 2
end_cap_mode = 2

[node name="OuterTopLeft" type="Line2D" parent="."]
position = Vector2( -50, -45 )
points = PoolVector2Array( 0, 0, -10, 10, -10, 30 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1601466224
begin_cap_mode = 2
end_cap_mode = 2

[node name="OuterBottomLeft" type="Line2D" parent="."]
position = Vector2( -50, 45 )
points = PoolVector2Array( 0, 0, -10, -10, -10, -30 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1041062438
begin_cap_mode = 2
end_cap_mode = 2

[node name="OuterBottomRight" type="Line2D" parent="."]
position = Vector2( 50, 45 )
points = PoolVector2Array( 0, 0, 10, -10, 10, -30 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1056964608

[node name="InnerTopRight" type="Line2D" parent="."]
position = Vector2( 10, -10 )
points = PoolVector2Array( 0, 0, 10, -10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 418870288
begin_cap_mode = 2
end_cap_mode = 2

[node name="InnerTopLeft" type="Line2D" parent="."]
position = Vector2( -10, -10 )
points = PoolVector2Array( 0, 0, -10, -10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 264153088
begin_cap_mode = 2
end_cap_mode = 2

[node name="InnerBottomLeft" type="Line2D" parent="."]
position = Vector2( -10, 10 )
points = PoolVector2Array( 0, 0, -10, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 256379136
begin_cap_mode = 2
end_cap_mode = 2

[node name="InnerBottomRight" type="Line2D" parent="."]
position = Vector2( 10, 10 )
points = PoolVector2Array( 0, 0, 10, 10 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 418870288
begin_cap_mode = 2
end_cap_mode = 2

[node name="Range" type="Label" parent="."]
margin_left = -74.0
margin_top = 45.0
margin_right = 74.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 2 )
text = "1500+ m"
align = 1

